[package]
name = "egui-wgpu-winit-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
egui = "0.30.0"
egui-wgpu = { version = "0.30.0", features = ["winit"] }
egui-winit = "0.30.0"
pollster = "0.4.0"
wgpu = { version = "23.0.1", default-features = false, features = ["dx12", "metal"] }
